--- a/index.html
+++ b/index.html
@@ -350,138 +350,64 @@
     </div>
 
     <!-- Blog Section -->
-    <section class="blog" id="blog">
-        <div class="section-header">
+<section class="blog" id="blog">
+    <div class="section-header">
             <h2>BLOG</h2>
             <p>Stay informed with the latest developments in healthcare training, emergency response, and medical innovations from Opengate Health Services</p>
         </div>
-        <div class="blog-carousel-container">
-            <div class="blog-carousel" id="blogCarousel">
-                <!-- Slide 1 -->
-                <div class="blog-slide">
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img1.jpg');">
-                       <!-- <div class="blog-image">
-                            <img src="babcock.png" alt="Emergency Response Training">
-                            <div class="blog-category">Training</div>
-                        </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">August 25, 2025</span>
-                             <!--   <span class="blog-author">Dr. Sarah Johnson</span> -->
-                            </div>
-                           <!-- <h3>Advanced Life Support Training: New AHA Guidelines for 2025</h3> -->
-                            <p>Discover the latest American Heart Association guidelines for Advanced Cardiovascular Life Support (ACLS) and how our updated training programs ensure healthcare professionals stay current with best practices...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img10.jpg');">
-                        <div class="blog-overlay"></div>
-                    <!-- <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x200/2c7873/ffffff?text=Air+Ambulance+Service" alt="Air Ambulance Service">
-                            <div class="blog-category">Emergency Services</div>
-                    </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">August 20, 2025</span>
-                             <!--   <span class="blog-author">Captain Mike Adams</span> -->
-                            </div>
-                            <!-- <h3>Successful Medical Evacuation: Saving Lives with Rapid Response</h3> -->
-                            <p>A recent emergency medical evacuation showcases the critical importance of our 24/7 air ambulance services in remote areas...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img9.jpg');">
-                        <div class="blog-overlay"></div>
-                    <!--    <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x200/e85d4e/ffffff?text=Neonatal+Training" alt="Neonatal Training">
-                            <div class="blog-category">Maternal Care</div>
-                        </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">August 15, 2025</span>
-                             <!--   <span class="blog-author">Dr. Grace Adebayo</span> -->
-                            </div>
-                          <!--  <h3>Helping Babies Breathe: Impact on Neonatal Survival Rates</h3> -->
-                            <p>Our Helping Babies Breathe program has trained over 500 healthcare workers this year, significantly improving newborn outcomes...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-                </div>
-
-                <!-- Slide 2 -->
-                <div class="blog-slide">
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img8.jpg');">
-                        <div class="blog-overlay"></div>
-                    <!--    <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x200/1e3a5f/ffffff?text=CPR+Training" alt="CPR Training">
-                            <div class="blog-category">Education</div>
-                        </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">August 10, 2025</span>
-                              <!--  <span class="blog-author">Instructor James Wilson</span> -->
-                            </div>
-                           <!-- <h3>Community CPR Training: Empowering Citizens to Save Lives</h3> -->
-                            <p>Our community outreach CPR training programs have reached over 2,000 individuals this quarter, creating a network of life-savers...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img7.jpg');">
-                        <div class="blog-overlay"></div>
-                    <!--    <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x200/2c7873/ffffff?text=Medical+Equipment" alt="Medical Equipment">
-                            <div class="blog-category">Equipment</div>
-                        </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">August 5, 2025</span>
-                               <!-- <span class="blog-author">Supply Chain Team</span> -->
-                            </div>
-                          <!--  <h3>Latest Medical Equipment Delivery to Rural Healthcare Centers</h3> -->
-                            <p>Opengate Health Services successfully delivered essential medical equipment to 15 rural healthcare centers, improving access to quality care...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-
-                    <article class="blog-card" style="background-image: url('./gallery/uploads/img6.jpg');">
-                        <div class="blog-overlay"></div>
-                    <!--    <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x200/e85d4e/ffffff?text=Healthcare+Conference" alt="Healthcare Conference">
-                            <div class="blog-category">Events</div>
-                        </div> -->
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <span class="blog-date">July 30, 2025</span>
-                            <!--  <span class="blog-author">Conference Team</span> -->
-                            </div>
-                           <!-- <h3>West Africa Healthcare Excellence Conference 2025</h3> -->
-                            <p>Opengate Health Services proudly participated in the largest healthcare conference in West Africa, sharing innovations and best practices...</p>
-                            <a href="#" class="blog-read-more">Read More</a>
-                        </div>
-                    </article>
-                </div>
-            </div>
-
-            <!-- Navigation Controls -->
-            <div class="blog-controls">
-                <button class="blog-nav prev" id="blogPrev">‹</button>
-                <button class="blog-nav next" id="blogNext">›</button>
-            </div>
-
-            <!-- Indicators -->
-            <div class="blog-indicators" id="blogIndicators">
-                <div class="blog-indicator active"></div>
-                <div class="blog-indicator"></div>
-            </div>
+  <div class="carousel-container">
+    <div class="carousel-track" id="carouselTrack">
+      <!-- Define your carousel cards here -->
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img12.jpg');">
+        <div class="card-overlay">
+          <div class="card-title">August 25, 2024</div>
+          <div class="card-description">Strengthening the frontline: Delivering cutting-edge skills for life-critical interventions.</div>
+          <a href="#" class="read-more">Read More</a>
         </div>
+      </div>
 
-        <div class="blog-cta">
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img1.jpg');">
+        <div class="card-overlay">
+          <div class="card-title">March 10,2024</div>
+          <div class="card-description">From simulations to real-world readiness: Successful completion of BLS, ACLS, and neonatal resuscitation modules</div>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+      </div>
+
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img5.jpg');">
+        <div class="card-overlay">
+          <div class="card-title">July 2,2024</div>
+          <div class="card-description">Elevating institutional standards with hands-on training in Resuscitation Program essentials.</div>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+      </div>
+
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img3.jpg');">
+        <div class="card-overlay">
+          <div class="card-title">April 17,2025</div>
+          <div class="card-description">Professional development in action: Equipping our healthcare heroes with life saving expertise.</div>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+      </div>
+
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img9.jpg');">
+        <div class="card-overlay">
+          <div class="card-title">September 12, 2025</div>
+          <div class="card-description">Elevating standards in emergency response: latest BLS, ACLS, and NRP training ensures our providers are ready for any challenge</div>
+          <a href="#" class="read-more">Read More</a>
+        </div>
+      </div>
+
+      <!-- Add as many more cards as you want directly in HTML -->
+    </div>
+
+    <button class="nav-button prev-btn" id="prevBtn">‹</button>
+    <button class="nav-button next-btn" id="nextBtn">›</button>
+  </div>
+     <div class="blog-cta">
             <a href="./gallery/gallery.html" class="btn btn-primary">View Gallery</a>
         </div>
-    </section>
+</section>    
 
     <!-- CTA Section -->
     <section class="cta" id="training">
@@ -555,65 +481,6 @@
         </div>
     </footer>
 
-   <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const slider = document.querySelector(".blog-slide");
-  const cards = document.querySelectorAll(".blog-card");
-  let currentIndex = 0;
-  const slideInterval = 4000; // 4s
-  let autoSlideTimer;
-
-  function goToSlide(index) {
-    currentIndex = (index + cards.length) % cards.length; // wrap around
-    slider.scrollTo({
-      left: cards[currentIndex].offsetLeft,
-      behavior: "smooth"
-    });
-  }
-
-  function autoSlide() {
-    goToSlide(currentIndex + 1);
-  }
-
-  function startAutoSlide() {
-    stopAutoSlide();
-    autoSlideTimer = setInterval(autoSlide, slideInterval);
-  }
-
-  function stopAutoSlide() {
-    if (autoSlideTimer) {
-      clearInterval(autoSlideTimer);
-      autoSlideTimer = null;
-    }
-  }
-
-  // Start auto sliding
-  startAutoSlide();
-
-  // Desktop hover pause
-  slider.addEventListener("mouseenter", stopAutoSlide);
-  slider.addEventListener("mouseleave", startAutoSlide);
-
-  // Mobile touch pause + snap back
-  slider.addEventListener("touchstart", stopAutoSlide);
-  slider.addEventListener("touchend", () => {
-    const scrollLeft = slider.scrollLeft;
-    let closestIndex = 0;
-    let closestDistance = Infinity;
-
-    cards.forEach((card, index) => {
-      const distance = Math.abs(card.offsetLeft - scrollLeft);
-      if (distance < closestDistance) {
-        closestDistance = distance;
-        closestIndex = index;
-      }
-    });
-
-    goToSlide(closestIndex); // snap to closest card
-    startAutoSlide();        // resume autoplay
-  });
-});
-</script>
 
 
     <script src="./js/index.js" defer></script>
