--- a/html/training.html
+++ b/html/training.html
@@ -44,7 +44,7 @@
     <i class="fa-solid fa-heart-pulse course-icon"></i>
     <div class="course-text">
       <h3>BLS - Basic Life Support</h3>
-      <p>Learn essential CPR techniques and first-response care for emergencies.</p>
+      <p>Learn essential CPR techniques and first-response care for emergencies</p>
     </div>
   </div>
 
@@ -52,15 +52,15 @@
     <i class="fa-solid fa-stethoscope course-icon"></i>
     <div class="course-text">
       <h3>ACLS - Advanced Cardiac Life Support</h3>
-      <p>Comprehensive training on managing cardiac arrest and life-threatening conditions.</p>
+      <p>Comprehensive training on managing cardiac arrest and life-threatening conditions</p>
     </div>
   </div>
 
   <div class="course-item">
     <i class="fa-solid fa-user-nurse course-icon"></i>
     <div class="course-text">
-      <h3>AHA - American Heart Association Certified</h3>
-      <p>Accredited certification courses following AHA guidelines.</p>
+      <h3>Heartsavers CPR First Aid</h3>
+      <p>Basic lifesaving skills for handling cardiac and first aid emergencies</p>
     </div>
   </div>
 
@@ -68,7 +68,31 @@
     <i class="fa-solid fa-child course-icon"></i>
     <div class="course-text">
       <h3>PALS - Pediatric Advanced Life Support</h3>
-      <p>Focused on critical care for infants and children in emergencies.</p>
+      <p>Focused on critical care for infants and children in emergencies</p>
+    </div>
+  </div>
+
+  <div class="course-item">
+    <i class="fa-solid fa-baby course-icon"></i>
+    <div class="course-text">
+      <h3>NRP - Neonatal Resuscitation Program</h3>
+      <p>Training to support newborns in critical situations at birth</p>
+    </div>
+  </div>
+
+  <div class="course-item">
+    <i class="fa-solid fa-heart-circle-bolt course-icon"></i>
+    <div class="course-text">
+      <h3>Helping Babies Breathe (HBB) Program</h3>
+      <p>Focused on immediate care and resuscitation for newborns in resource-limited settings</p>
+    </div>
+  </div>
+
+  <div class="course-item">
+    <i class="fa-solid fa-user-doctor course-icon"></i>
+    <div class="course-text">
+      <h3>Critical Care Continuing Education Program (Adult/Pediatrics/Neonatal ICU)</h3>
+      <p>Ongoing education for managing critically ill patients across all ICU settings</p>
     </div>
   </div>
 </section>
