--- a/html/training.html
+++ b/html/training.html
@@ -91,7 +91,7 @@
   <div class="course-item">
     <i class="fa-solid fa-user-doctor course-icon"></i>
     <div class="course-text">
-      <h3>Critical Care Continuing Education Program (Adult/Pediatrics/Neonatal ICU)</h3>
+      <h3>Critical Care Continuing Education Program (Adult/Pediatrics/Neonatal)</h3>
       <p>Ongoing education for managing critically ill patients across all ICU settings</p>
     </div>
   </div>
@@ -228,4 +228,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
