--- a/html/training.html
+++ b/html/training.html
@@ -91,8 +91,8 @@
   <div class="course-item">
     <i class="fa-solid fa-user-doctor course-icon"></i>
     <div class="course-text">
-      <h3>Critical Care Continuing Education Program (Adult/Pediatrics/Neonatal)</h3>
-      <p>Ongoing education for managing critically ill patients across all ICU settings</p>
+      <h3>Critical Care Continuing Education Program</h3>
+      <p>Ongoing education for managing critically ill patients (Adult/Pediatrics/Neonatal)</p>
     </div>
   </div>
 </section>
@@ -228,5 +228,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
