--- a/html/training.html
+++ b/html/training.html
@@ -32,7 +32,7 @@
         </div>
     </nav> 
            <div class="hero-image"> 
-                <div class="hero-image-placeholder"> <img src="../gallery/uploads/img4.jpg" alt="Emergency Response Training"></div>
+                <div class="hero-image-placeholder"> <img src="../gallery/uploads/img4.webp" alt="Emergency Response Training"></div>
                     <div class="hero-text">Training Programs</div>
             </div>
     </section>
@@ -259,4 +259,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
