--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
       </div>
 
-      <div class="carousel-card" style="background-image: url('./gallery/uploads/img1.jpg');">
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img1.webp');">
         <div class="card-overlay">
           <div class="card-title">March 10,2024</div>
           <div class="card-description">From simulations to real-world readiness: Successful completion of BLS, ACLS, and neonatal resuscitation modules</div>
@@ -396,7 +396,7 @@
         </div>
       </div>
 
-      <div class="carousel-card" style="background-image: url('./gallery/uploads/img5.jpg');">
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img5.webp');">
         <div class="card-overlay">
           <div class="card-title">July 2,2024</div>
           <div class="card-description">Elevating institutional standards with hands-on training in Resuscitation Program essentials.</div>
@@ -404,7 +404,7 @@
         </div>
       </div>
 
-      <div class="carousel-card" style="background-image: url('./gallery/uploads/img3.jpg');">
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img3.webp');">
         <div class="card-overlay">
           <div class="card-title">April 17,2025</div>
           <div class="card-description">Professional development in action: Equipping our healthcare heroes with life saving expertise.</div>
@@ -412,7 +412,7 @@
         </div>
       </div>
 
-      <div class="carousel-card" style="background-image: url('./gallery/uploads/img9.jpg');">
+      <div class="carousel-card" style="background-image: url('./gallery/uploads/img9.webp');">
         <div class="card-overlay">
           <div class="card-title">September 12, 2025</div>
           <div class="card-description">Elevating standards in emergency response: latest BLS, ACLS, and NRP training ensures our providers are ready for any challenge</div>
